--- a/css/popup.css
+++ b/css/popup.css
@@ -772,7 +772,7 @@ span.time-tooltip span:first-child {
 }
 
 .msg_content  img {
-	width: 100%;
+	max-width: 100%;
 	margin-top: 5px;
 	display: block;
 }
