--- a/css/editor.css
+++ b/css/editor.css
@@ -3,6 +3,7 @@
 	overflow: hidden;
 	position: relative;
 	background-color: #fff;
+	margin-top: 15px;
 }
 
 #commands {
@@ -119,7 +120,7 @@
 	/* display: inline-block; */
 	padding: 0;
 	/* background-color: #eee; */
-	max-height: 100px;
+	max-height: 85px;
 	overflow-y: scroll;
 	margin: 0;
 }
