--- a/css/popup.css
+++ b/css/popup.css
@@ -5,7 +5,6 @@
 
 body {
 	width:600px;
-	/* height: 650px; */
 	overflow-x:hidden;
 	overflow-y:hidden;
 	/*font-family: 'Roboto', sans-serif*/;
@@ -30,6 +29,7 @@ body {
 }
 .fa:before {
 	font-family: 'fontawesome';
+	display:  inline-block;
 }
 
 .container {
@@ -37,7 +37,7 @@ body {
 }
 
 #profile-container {
-	background-color: #fff;
+	background-color: #004862;
 	height: 0;
 	width: 100%;
 	position: absolute;
@@ -45,6 +45,7 @@ body {
 	overflow: hidden;
 	transition: height .25s linear;
 	z-index: 300;
+	/* color:  #fff; */
 }
 #profile-container.on {
 	height: 550px;
@@ -102,6 +103,9 @@ ul.navigator li:hover {
 	vertical-align:  top;
 	width: 140px;
 }
+#profile-item {
+	cursor: pointer;
+}
 #header-menu {
 	position: absolute;
 	right: 0;
@@ -130,9 +134,6 @@ ul.navigator li:hover {
 #user-avatar {
 	width: 35px;
 	border: 1px solid #fff;
-	/* border-radius:  20px; */
-	/* display: inline-block; */
-	/* vertical-align: middle; */
 	float:  left;
 	margin-right:  5px;
 }
@@ -140,7 +141,6 @@ ul.navigator li:hover {
 	display: block;
 }
 #user-nickname {
-	/* font-weight: 400; */
 	font-size: 16px;
 }
 #user-fullname {
@@ -167,19 +167,17 @@ ul.navigator li:hover {
 	height: 550px;
 	overflow-y: hidden;
 	overflow-x: hidden;
+	/* z-index: 200; */
 }
 .messages-header {
 	position: absolute;
 	top:0;
-	/* left: 0; */
 	right: 0;
 	padding: 5px;
 	width: 440px;
-	/* height: 20px; */
 }
 
 #messages-header {
-	/*background-color: rgba(100,100,100,.9);*/
 	background-color: rgba(242, 86, 0, .9);
 	z-index: 100;
 	border-bottom: 1px solid #fff;
@@ -193,16 +191,14 @@ ul.navigator li:hover {
 }
 #messages-header .nav {
 	float: right;
-	border: 1px solid #fff;
-}
-#messages-header .search {
-	float: right;
-	background-color: #fff;
-	border: 1px solid #fff;
+	/* border: 1px solid #fff; */
+	padding: 5px;
+	/* background-color: #fff; */
+	font-size: 18px;
 }
 #messages-header .button {
 	border: 0;
-	background-color: #666;
+	/* background-color: #666; */
 	color: #fff;
 	padding: 4px;
 	cursor: pointer;
@@ -211,21 +207,45 @@ ul.navigator li:hover {
 	text-align: center;
 	display: inline-block;
 }
-#messages-header .search a:hover {
+form.search {
+	position: absolute;
+	right: 0;
+	top: 44px;
+	background-color: #F25600;
+	z-index: 100;
+	height: 0;
+	padding: 0;
+	overflow: hidden;
+	transition: height .2s ease;
+}
+form.search.on {
+	height: 28px;
+}
+
+form.search a:hover {
 	background-color: #000;
 }
-#messages-header .search input[type=text] {
+form.search input[type=text] {
 	outline: none;
-	border-top-left-radius: 3px;
-	border-bottom-left-radius: 3px;
 	border: 0;
-	margin: 0;
+	margin: 2px 1px 2px 5px;
 	padding: 4px;
-	width: 0px;
-	transition: width .25s ease;
+	width: 50px;
+	transition: width .2s ease;
+	display: inline-block;
 }
-#messages-header .search input[type=text]:focus {
-	width: 120px;	
+form.search input[type=text]:focus {
+	width: 120px;
+}
+form.search .button {
+	/* background-color: #ddd; */
+	width: 15px;
+	text-align: center;
+	display: inline-block;
+	margin: 2px;
+	color:  #fff;
+	padding: 4px;
+	cursor: pointer;
 }
 
 #board-info {
@@ -233,27 +253,25 @@ ul.navigator li:hover {
 }
 
 #board-title {
-	text-shadow: 0 0 5px rgba(0, 0, 0, .8);
+	/* text-shadow: 0 0 5px rgba(0, 0, 0, .8); */
 	overflow: hidden;
 	white-space: nowrap;
 	text-overflow: ellipsis;
 	cursor: pointer;
 	font-size: 16px;
-	margin-top:  4px;
+	margin-top: 10px;
 	margin-left:  5px;
 	display: block;
 }
 #board-title:before {
-	display:inline-block;
 	margin-right: 5px;
 	transition: all .25s ease;
-	/* margin-top:  0; */
 }
 #board-description {
 	clear: both;
 	font-weight: 200;
 	font-size: 12px;
-	margin-top: 20px;
+	margin-top: 30px;
 	margin-left: 6px;
 }
 
@@ -269,7 +287,7 @@ ul.navigator li:hover {
 }
 #board-description img.avatar {
 	float: right;
-	width: 55px;
+	width: 60px;
 	border: 1px solid #fff;
 	margin-top: 13px;
 }
@@ -343,7 +361,6 @@ ul.navigator li:hover {
 	margin: 0;
 	list-style-type: none;
 	max-width: 290px;
-	/* outline: 1px solid red; */
 	height: 96px;
 	overflow-y: auto;
 }
@@ -363,7 +380,6 @@ ul.navigator li:hover {
 	width: 12px;
 	height: 12px;
 	background-size: 15px;
-	display: inline-block;
 	overflow: visible;
 }
 #board-description .links a {
@@ -380,8 +396,6 @@ ul.navigator li:hover {
 }
 /* Control del tema */
 .theme-control {
-	/* clear: both; */
-	/* padding-top: 5px; */
 	perspective: 800px;
 	float: right;
 }
@@ -506,12 +520,11 @@ ul.navigator li:hover {
 	position: fixed;
 	bottom: 0;
 	width: 100%;
-	/* background-color: #fff; */
 	height: 40px;
-	border-top: 1px solid #fff;
 	overflow: hidden;
 	z-index: 200;
 	transition: height .25s ease-in-out;
+	pointer-events:none;
 }
 /* el mensaje que se está contestanddo */
 #replying-message {
@@ -519,7 +532,7 @@ ul.navigator li:hover {
 	border-bottom: 1px dotted #666;
 	max-height: 220px;
 	overflow-y: scroll;
-	padding: 10px;
+	padding: 20px;
 }
 #edit-section h1 {
 	background-color: #666;
@@ -532,27 +545,34 @@ ul.navigator li:hover {
 	cursor: pointer;
 	margin: 0;
 	width: 130px;
+	pointer-events:auto;
 }
 
-#edit-section h1 .edit-title {
-	margin-right: 10px;
+#edit-section .edit-description {
+    display: none;
 }
 
 #edit-section.on {
 	height: 550px;
+	pointer-events:auto;
+	background-color: #fff;
 }
-#edit-section.on h1 .fa {
+
+#edit-section.on .edit-description {
+    display: inline;
+}
+#edit-section.on h1:before {
 	-webkit-transform:rotate(180deg);
 }
+
 /* Profile */
 #profile-section {
 	overflow: auto;
 	padding: 20px;
-	margin: 20px;
-	box-shadow: 0px 0px 20px 0px rgba(50, 50, 50, 0.75);
-	border: 1px solid #ccc;
-	height: 470px;
+	margin: 5px;
+	height: 500px;
 	position: relative;
+	background-color: #fff;
 }
 #logout {
 	position: absolute;
@@ -716,39 +736,27 @@ span.time-tooltip span:first-child {
 	font-size: 12px;
 	cursor: pointer;
 	color: #aaa;
-	/* clear: both; */
-	display: block;
-	float: left;
-	padding-top: 3px;
+	position: absolute;
+	top: 22px;
+	left: 50px;
 }
 .msg_header .reply2link:before {
-	display: inline-block;
 	-webkit-transform: rotate(180deg); /* Opera, Chrome, and Safari */
 	margin-right: 3px;
 }
 .msg_control {
-	/* position: absolute; */
-	/* right: 0; */
-	/* top: 0; */
-	/* overflow: hidden; */
-	/* transition: all .2s ease; */
 	font-size: 12px;
 	color: #ccc;
-	padding: 3px;
+	margin: 3px 0;
 }
 .modal .msg_control, #replying-message .msg_control {
 	display: none;
 }
 
-.msg_control:hover {
-	color: #999;
-}
-
 .msg_control .btn {
-	/* display: none; */
 	cursor: pointer;
-	/* padding: 4px 2px; */
 	margin-right: 10px;
+	transition: color .2s ease;
 }
 
 .msg_control .btn:hover {
@@ -778,6 +786,7 @@ span.time-tooltip span:first-child {
 .themes {
 	font-size: 11px;
 	padding: 0;
+	margin: 10px 0;
 }
 .themes:before {
 	content: "TEMAS: ";
@@ -816,7 +825,6 @@ span.time-tooltip span:first-child {
 
 .profile-social {
 	
-	/* float: right; */
 }
 
 .selector {
