--- a/css/popup.css
+++ b/css/popup.css
@@ -10,7 +10,9 @@ body {
 	/*font-family: 'Roboto', sans-serif*/;
 	/*font-family: 'Open Sans', sans-serif;*/
 	/*font-family: 'Dosis', sans-serif*/;
-	font-family: 'Muli', sans-serif;
+	/*font-family: 'Muli', sans-serif;*/
+	/*font-family: 'Noto Sans', sans-serif;*/
+	font-family: 'Quattrocento Sans', sans-serif;
 	font-size: 14px;
 	margin: 0px;
 }
@@ -19,13 +21,20 @@ body {
 	/*font-family: 'Roboto', sans-serif*/;
 	/*font-family: 'Open Sans', sans-serif;*/
 	/*font-family: 'Dosis', sans-serif*/;
-	font-family: 'Muli', sans-serif;
+	/*font-family: 'Muli', sans-serif;*/
+	/*font-family: 'Noto Sans', sans-serif;*/
+	font-family: 'Quattrocento Sans', sans-serif;
 }
 .fa:before {
 	font-family: 'fontawesome';
 	display:  inline-block;
 }
-
+span.highlight {
+	background-color: #3ccdc4;
+	color: #fff;
+	padding: 0 2px;
+	text-decoration: underline;
+}
 a {
 	color:#f30;
 }
@@ -181,11 +190,13 @@ ul.navigator li:hover {
 }
 #user-nickname {
 	font-size: 16px;
+	font-weight: bold;
 }
 #user-fullname {
-	font-weight: 200;
-	font-size: 14px;
+	/* font-weight: 200; */
+	/* font-size: 14px; */
 	margin-top: 5px;
+	font-weight: bold;
 }
 
 #navigation {
@@ -218,9 +229,9 @@ ul.navigator li:hover {
 }
 
 #messages-header {
-	background-color: rgba(255, 51, 0, .85);;
+	background-color: rgba(255, 51, 0, .85);
 	z-index: 100;
-	border-bottom: 1px solid #fff;
+	/* border-bottom: 1px solid #fff; */
 	transition: all .25s ease;
 }
 #messages-header.on {
@@ -254,16 +265,17 @@ ul.navigator li:hover {
 form.search {
 	position: absolute;
 	right: 0;
-	top: 44px;
-	background-color: #f30;
-	z-index: 100;
+	top: 47px;
+	background-color: rgba(255, 51, 0, .85);
+	z-index: 95;
 	height: 0;
-	padding: 0;
+	padding: 0 2px;
 	overflow: hidden;
 	transition: height .2s ease;
 }
 form.search.on {
 	height: 28px;
+	padding: 2px 2px;
 }
 
 form.search a:hover {
@@ -274,12 +286,9 @@ form.search input[type=text] {
 	border: 0;
 	margin: 2px 1px 2px 5px;
 	padding: 4px;
-	width: 50px;
+	width: 120px;
 	transition: width .2s ease;
 	display: inline-block;
-}
-form.search input[type=text]:focus {
-	width: 120px;
 }
 form.search .button {
 	/* background-color: #ddd; */
@@ -308,6 +317,7 @@ form.search .button {
 	/* max-width: 300px; */
 	overflow: hidden;
 	/* margin-right: 42px; */
+	font-weight: bold;
 }
 #board-title:before {
 	transition: -webkit-transform .25s ease;
@@ -315,14 +325,14 @@ form.search .button {
 	font-size: 8px;
 	left: 225px;
 	top: 38px;
-	background: #f30;
+	background-color: rgba(255, 51, 0, .85);
 	width: 10px;
 	height: 10px;
 	text-align: center;
 	padding: 4px;
 	border-radius: 30px;
 	/* z-index: 500; */
-	border-bottom: 1px solid #fff;
+	/* border-bottom: 1px solid #fff; */
 }
 #board-description {
 	clear: both;
@@ -367,8 +377,9 @@ form.search .button {
 
 #board-description .eskup-info {
 	/* height: 90px; */
-	width: 100%;
+	/* width: 100%; */
 	margin-top: 15px;
+	/* float: left; */
 }
 .eskup-info .stats {
 	float: left;
@@ -380,7 +391,7 @@ form.search .button {
 .eskup-info .stats:before {
 	display: block;
 	width: 100%;
-	font-size: 14px;
+	font-size: 12px;
 	text-transform: uppercase;
 }
 .eskup-info .info-users:before {
@@ -393,15 +404,15 @@ form.search .button {
 	content: "temas";
 }
 .eskup-info .stats div {
-	display: inline-block;
+	/* display: inline-block; */
 	margin: 3px;
 	width: 60px;
-	height: 50px;
+	/* height: 30px; */
 	background-color: #fff;
 }
 .eskup-info .stats div a {
 	display: block;
-	margin-top: 4px;
+	/* margin-top: 10px; */
 	font-size: 18px;
 	text-decoration: none;
 }
@@ -442,10 +453,12 @@ form.search .button {
 	content: "Más información:";
 	display: block;
 	padding: 0 3px;
+	font-weight: bold;
+	color:  #f30;
 }
 #board-description .links li {
-	padding: 2px;
 	margin-right: 5px;
+	padding: 2px 3px;
 }
 #board-description .links li.eskup:before {
 	content: " ";
@@ -457,14 +470,12 @@ form.search .button {
 	overflow: visible;
 }
 #board-description .links a {
-	text-decoration: none;
-	background-color: #555;
-	padding: 2px 3px;
+	/* text-decoration: none; */
 	display: inline-block;
-	color: #fff
+	color: #fff;
 }
 
-#board-description .links a:hover {
+#board-description .links li:hover {
 	background-color:#f30;
 	color: #fff;
 }
