--- a/css/popup.css
+++ b/css/popup.css
@@ -640,9 +640,9 @@ form.search .button {
 #replying-message {
 	background-color: #f8f8f8;
 	border-bottom: 1px dotted #666;
-	max-height: 220px;
+	max-height: 200px;
 	overflow-y: scroll;
-	padding: 20px;
+	padding: 5px 20px;
 }
 #edit-section h1 {
 	background-color: #666;
