pequeño cambio estético

--- a/css/popup.css
+++ b/css/popup.css
@@ -204,7 +204,7 @@ ul.navigator li:hover {
 	float:left;
 	width: 140px;
 	text-align: right;
-	padding: 5px;
+	padding: 15px 5px;
 }
 
 #navigation h1 {
