--- a/css/popup.css
+++ b/css/popup.css
@@ -283,7 +283,7 @@ form.search {
 	transition: all .2s ease;
 	/* transition: width .2s ease; */
 	-webkit-user-select: none;
-	border-bottom-left-radius: 10px;
+	border-bottom-left-radius: 15px;
 }
 form.search.on {
 	height: 28px;
@@ -1064,6 +1064,10 @@ span.time-tooltip span:first-child {
 	outline: 2px solid #f30;
 }
 
+.selector .theme-info {
+	padding-top: 5px;
+}
+
 .selector .puser-info {
 	float: left;
 	margin: 5px;
@@ -1096,12 +1100,12 @@ span.time-tooltip span:first-child {
 	-webkit-line-clamp: 2;
 	-webkit-box-orient: vertical;
 	overflow: hidden;
-	width: 300px;
+	width: 330px;
 	color: #666;
 }
 .selector .theme-control {
 	display: none;
-	padding-top: 5px;
+	/* padding-top: 0px; */
 }
 .selector li:hover .theme-control {
 	display: block;
